@startuml
skinparam dpi 150
skinparam classAttributeIconSize 0
skinparam classFontSize 10
skinparam classFontName Courier
skinparam wrapWidth 100
top to bottom direction
skinparam linetype ortho

class Administrador {
  +toString()
}

class Cliente {
  +getVeiculos()
  +removeVeiculo()
  +addVeiculo()
  +compareTo()
  +toString()
}

class Colaborador {
  - senha : String
  +setSenha()
  +compararSenha()
}

class Funcionario {
  - funcao : TipoFuncionario
  - salario : float
  +setSalario()
  +getFuncao()
  +getSalario()
  +setFuncao()
  +toString()
}

class Pessoa {
  - nome : String
  - email : String
  - cpf : String
  - telefone : String
  - endereco : String
  +getEndereco()
  +setCpf()
  +setEmail()
  +setNome()
  +setTelefone()
  +getTelefone()
  +getEmail()
  +getCpf()
  +setEndereco()
  +getNome()
}

class AtualizaAgendamentoUseCase {
  +use()
}

class BuscarPorIdAgendamentoUseCase {
  +use()
}

class CriarAgendamentoUseCase {
  +use()
}

Colaborador <|-- Administrador
Pessoa <|-- Cliente
Pessoa <|-- Colaborador
Colaborador <|-- Funcionario

@enduml
